Código Js e Css

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -143,6 +143,95 @@ h1 {
     font-size: 18px;
 }
 
+/* produtos */
+.produtos {
+    width: 100%;
+    max-width: 1200px;
+    padding: 32px;
+    margin: 0 auto;
+}
+
+.produtos-container {
+    display: grid; /* grid são pequenos quadradinhos como uma vitrine*/
+    grid-template-columns: repeat(auto-fill, minmax(320px, 1fr)); /* formato que vai ficar a minha vitrine*/
+    /* 1. disposição dos itens - quantos itens vai ter*/ 
+    /* 2. tamanho de cada item*/
+    /* 1fr -1 fração - a tela toda */
+    gap: 20px;
+}
+
+/* nomes das classes no script js */
+.cartao-produto {
+    background-color: var(--white-color);
+    border-radius: 16px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+    cursor: pointer;
+    transition: 0.6s;
+    overflow: hidden;
+
+}
+
+.cartao-produto:hover {
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+    transform: translateY(-16px);
+}
+
+.imagem-produto {
+    width: 100%;
+    height: 180px;
+    object-fit: cover; /* vai cobrir a caixa*/
+}
+
+.info-produto {
+    padding: 16px;
+}
+
+.nome-produto {
+    font-size: 16px;
+    font-weight: bold;
+    margin-bottom: 6px;
+   
+}
+
+.descricao-produto {
+    font-size: 13px;
+    margin-bottom: 12px;
+}
+
+.preco-produto {
+    font-size: 20px;
+    color: var(--primary-color);
+    margin-bottom: 12px;
+    font-weight: bold;
+}
+
+.botao-produto {
+    width: 100%;
+    background-color: var(--accent-color);
+    color: var(--white-color);
+    border: none;
+    padding: 12px;
+    cursor: pointer;
+    font-weight: 600;
+    font-size: 16px;
+    border-radius: 5px;
+    transition: 0.3s ease-in-out;
+
+}
+
+.botao-produto:hover {
+    background-color: var(--secondary-color)
+}
+
+
+
+ /* bottom - embaixo
+    top - cima
+    left - esquerda
+    right - direita*/
+
+
+
 /* rodape*/
 footer {
     background-color: var(--secondary-color);
